# three-six-five-scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  converter.py  pyproject.toml  runner.py  scrapy.cfg  utils.py
curls/: README.md
data/: README.md
logs/: README.md
secrets/: README.md
threesixfive/: items.py  pipelines.py  settings.py
threesixfive/spiders/: courses.py  lessons.py  playbacks.py  subtitles.py  utils.py  videos.py
