[tool.poetry]
name = "three-six-five-scraper"
version = "0.1.0"
description = "Scraper to download videos from 365 Data Science using Scrapy"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "three_six_five_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.7.1"
pymongo = "^4.3.2"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | venv
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
